[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/pngwing.com.png" type="Texture" id=1]
[ext_resource path="res://assets/images/PngItem_647165.png" type="Texture" id=2]
[ext_resource path="res://assets/images/spaes.jpg" type="Texture" id=3]
[ext_resource path="res://assets/images/pngwing.com - Copia - Copia.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Screenshot_1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/pngwing.com - Copia.png" type="Texture" id=6]
[ext_resource path="res://assets/screens_menus/main.gd" type="Script" id=7]
[ext_resource path="res://assets/sfx/pshew.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/pew.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/songs/Dot. Real Heroes.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "main"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -47, 203.593 ), Vector2( 41, 203.593 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("moon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 309.265, 52.8428 ), Vector2( 205.265, 52.8428 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("gun:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -26.3, -37.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Screenshot_1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -18, 162.593 ), Vector2( 62.4753, 157.839 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Screenshot_1:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -26.3, -37.2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Shot"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pew"
length = 8.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Screenshot_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 62.4753, 157.839 ), Vector2( 199, 55.5929 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Screenshot_1:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -37.2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("moon:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Screenshot_1:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0207218, 0.0207218 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("moon:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.4, 3.5, 3.6, 4.4, 4.5, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.482353, 0.482353, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.482353, 0.482353, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3.75, 5.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Moonhit:stream")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 9 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BulletGo:stream")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BulletGo:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("BulletGo:pitch_scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Moonhit:volume_db")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 23.0, 24.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Moonhit:autoplay")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("BulletGo:autoplay")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Moonhit:playing")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("BulletGo:playing")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Moonhit:pitch_scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}
tracks/16/type = "audio"
tracks/16/path = NodePath("BulletGo")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}
tracks/17/type = "audio"
tracks/17/path = NodePath("Moonhit")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 3.5, 4.5 )
}
tracks/18/type = "value"
tracks/18/path = NodePath("MoonBoom:stream")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 3.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/19/type = "audio"
tracks/19/path = NodePath("MoonBoom")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 3.4 )
}
tracks/20/type = "value"
tracks/20/path = NodePath("Sprite:texture")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 4 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("Sprite:modulate")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 4.5, 5.25, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("MoonBoom:volume_db")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 3.4, 5.75, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, -80.0 ]
}

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/comic-sans-ms-4.ttf"

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = SubResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.40715
margin_bottom = 1.40715
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 112.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 128.0 ]
}

[node name="bg" type="Sprite" parent="."]
position = Vector2( 128, 111 )
texture = ExtResource( 3 )

[node name="moon" type="Sprite" parent="."]
position = Vector2( 309.265, 52.8428 )
scale = Vector2( 0.168174, 0.168175 )
texture = ExtResource( 1 )

[node name="Screenshot_1" type="Sprite" parent="."]
position = Vector2( -18, 162.593 )
rotation = -0.459022
scale = Vector2( 0.0207218, 0.0207218 )
texture = ExtResource( 5 )

[node name="gun" type="Sprite" parent="."]
position = Vector2( -47, 203.593 )
rotation = -0.459022
scale = Vector2( 0.170497, 0.170498 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "main"
anims/main = SubResource( 1 )

[node name="ShotAnim" type="AnimationPlayer" parent="."]
anims/Shot = SubResource( 2 )

[node name="BulletAnim" type="AnimationPlayer" parent="."]
anims/pew = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.40715
margin_bottom = -1.40715
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.00226148 )
position = Vector2( 205.265, 52.8428 )
scale = Vector2( 0.168174, 0.168175 )

[node name="ReadyMessage" type="Label" parent="."]
margin_left = 44.0
margin_top = 100.593
margin_right = 213.0
margin_bottom = 126.593
custom_fonts/font = SubResource( 5 )
text = "pres pace 2(to) shot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletGo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 24.0

[node name="Moonhit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 23.0
pitch_scale = 1.00001

[node name="MoonBoom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 1.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="BulletAnim" to="." method="_on_BulletAnim_animation_finished"]
[connection signal="animation_started" from="BulletAnim" to="." method="_on_BulletAnim_animation_started"]
